# monday-zero

./: AGENTS.md  CHARTER.md  NEXT_START.md  README.md  STATE.md  pyproject.toml
experiments/: analyze_finite_state_conformance_cycle4.py  generate_protocol_integrity_corpus.py  generate_study_002_manifest.py  relay_baseline.py  run_protocol_integrity_complete_report.py  run_protocol_integrity_historical_transfer.py  run_protocol_integrity_synthetic_gate.py  run_study_002_exact_screen.py  run_study_002_random_screen.py  span_random_screen.py  study005_cycle2.py  study005_cycle3.py
experiments/results/: relay-baseline-2026-07-14.json
governance/: HUMAN_INTERVENTION.md  HUMAN_INTERVENTION_CONTINUATION_2026-07-23.md  HUMAN_INTERVENTION_CONTINUATION_2026-07-24.md
research/decisions/: 2026-07-18-next-study-go-no-go-audit.md  2026-07-24-post-study-004-portfolio-assessment.md  2026-07-24-study-005-source-ingress-record.md
research/proposals/: STUDY_002_EXACT_FIRST_SCREENING.md  STUDY_003_PROTOCOL_INTEGRITY.md  STUDY_004_FINITE_STATE_CONFORMANCE.md  STUDY_005_TZDB_TRANSITION_ROUNDTRIP.md
self/: CHANGES.md  SELF.md
src/monday_zero/: __init__.py  agents.py  match.py
src/templex_zero/: agents.py  span_match.py  span_v0_2_agents.py  (+2 more)
tests/: test_exact_first_random_screen.py  test_exact_first_solver.py  test_finite_state_conformance_corpus.py  test_finite_state_conformance_oracle.py  test_keystone.py  test_protocol_integrity_complete_report.py  test_protocol_integrity_corpus.py  test_relay.py  test_span_v0_2.py  test_span_v0_2_agents.py  test_zoneinfo_harness.py
(+102 files in other folders)
